force-app/main/default/objects/DocuSign_Tab__mdt.object
<CustomObject>
    <fields>
        <fullName>Date_Signed_Anchor_String__c</fullName>
        <label>Date Signed Anchor String</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DocuSign_Envelop_Setting__c</fullName>
        <label>DocuSign Envelop Setting</label>
        <referenceTo>DocuSign_Envelop_Setting__mdt</referenceTo>
        <relationshipLabel>DocuSign Tabs</relationshipLabel>
        <relationshipName>DocuSign_Tabs</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Routing_Order__c</fullName>
        <label>Routing Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sign_Here_Anchor_String__c</fullName>
        <label>Sign Here Anchor String</label>
        <type>TextArea</type>
    </fields>
    <label>DocuSign Tab</label>
    <pluralLabel>DocuSign Tabs</pluralLabel>
</CustomObject>